fixed layout issues on homepage for services and testimonials

--- a/blocks/api-solution/api-solution.css
+++ b/blocks/api-solution/api-solution.css
@@ -2,7 +2,10 @@
 @import url('./__wrapper/api-solution__wrapper.css');
 
 .api-solution {
-    /* min-height: 80vh;
+
     display: flex;
+
+    min-height: 80vh;
+    /* display: flex;
     align-items: center; */
 }
