--- a/blocks/testimonials/testimonials.css
+++ b/blocks/testimonials/testimonials.css
@@ -5,7 +5,7 @@
 @import url('./__position/testimonials__position.css');
 
 .testimonials {
-    min-height: 80vh;
+    /* min-height: 80vh; */
 
     
 }
